# misis2023f-22-01-ushakova-a-r

./: .build.bat  .gitignore  CMakeLists.txt  README.md  codeforces.id  read me  report.md  status.md
prj.codeforces/: 0045A  0050A  0055A  0059A  0144A  0231A  0270A  0271A  0461A  0520A  0723A  0915A  1368A  1553A  1772A  1829B  1872A  CMakeLists.txt
prj.cw/: CMakeLists.txt  README.md  header.hpp  main.cpp  median_filter.hpp  read me
prj.cw/example/: CMakeLists.txt  example_cmd_app.cpp
prj.cw/source/: median_filter.cpp
prj.lab/: CMakeLists.txt
prj.lab/lab01/: CMakeLists.txt  report01.md  task01-01.cpp  task01-02.cpp
prj.lab/lab02/: CMakeLists.txt  report02.md  task02.cpp
prj.lab/lab03/: CMakeLists.txt  report03.md  task03.cpp
prj.lab/lab04/: CMakeLists.txt  report04.md  task04-01.cpp  task04-02.cpp  task04-03.cpp
prj.lab/lab05/: CMakeLists.txt  report05.md  task05.cpp
prj.lab/lab06/: CMakeLists.txt  report06.md  task06.cpp
prj.lab/semcv/: CMakeLists.txt  semcv.cpp  semcv.hpp
prj.lab/test/lab01/task01-01/: decreased_x2.tif  decreased_x3.tif  decreased_x4.tif  decreased_x5.tif  increased_x2.tif  increased_x3.tif  increased_x4.tif  increased_x5.tif  task01.lst
prj.lab/test/lab02/stats/: diffs.csv  distr_gauss.py
prj.lab/test/lab04/diff/: binary.sh  gen.sh  sobel.sh
