add_executable(0144A.cpp)
add_executable(0271A.cpp)
add_executable(0461A.cpp)
add_executable(0520A.cpp)
add_executable(0723A.cpp)
add_executable(0915A.cpp)
add_executable(1872A.cpp)
add_executable(0050A.cpp)
add_executable(1772A.cpp)
add_executable(0231A.cpp)
add_executable(1368A.cpp)
add_executable(1829B.cpp)
add_executable(1553A.cpp)
